Fixed display issues in the content section
Subtext for the images were too close together,
so more padding was added.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 a {
     color: #E5E7EB;
     font-size: 18px;
+    text-decoration: none;
 }
 
 .header, .intro, .content, .quote, .footer {
@@ -91,6 +92,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 400px;
     justify-content: space-evenly;
 }
 
@@ -102,13 +104,19 @@ a {
 }
 
 .content-images .image {
-    flex-basis: auto;
     height: 150px;
     width: 150px;
     border-style: solid;
     border-width: 3px;
     border-color: #3882F6;
     border-radius: 20px;
+    margin: 24px;
+    flex: 1;
+}
+
+.content-images .image-text {
+    padding: 12px;
+    width: 150px;
 }
 
 /* ---- Styles for quote ---------------------------*/
